# revview

./: .gitignore  pyproject.toml
pmerge/: __main__.py  controller.py  model.py  view.py  view.ui
revview/: __init__.py  __main__.py  _const.py  _style.py  controller.py  main.ui  model.py  progress.ui  settings.ui  view.py  view.ui
revview/main/: controller.py  model.py  view.py
revview/settings/: controller.py  model.py  view.py
src/: __init__.py  __main__.py  main.ui  settings.ui
src/main/: model.py
src/settings/: controller.py  model.py  view.py
