[tool.poetry]
name = "revview"
version = "0.3.1"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<3.13"
python-pptx = "^0.6.23"
tqdm = "4.58.0"
click = "7.1.2"
pyqt5-tools = "5.15.1.1.7.5"
pywin32 = "300"
opencv-python = "4.4.0.46"
numpy = "1.20.1"
pillow = "8.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
pytest = "6.2.2"
matplotlib = "3.3.4"
pyinstaller = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

